<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar_main"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_weight=".85"
        android:background="@color/background"
        >

    <Spinner
        android:id="@+id/admission_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_weight=".16"
        android:entries="@array/admission_filter"
        android:gravity="center"
        android:prompt="@string/admission_spinner_title"
        android:spinnerMode="dialog"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </Spinner>

    <Spinner
    android:id="@+id/field_filter"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:typeface="sans"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_weight=".16"
        android:gravity="center"
    android:layout_below="@id/admission_filter"
    android:entries="@array/field_filter"
    android:prompt="@string/field_spinner_title"
    android:spinnerMode="dialog" >
    </Spinner>

    <Spinner
        android:id="@+id/state_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_weight=".16"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_below="@id/field_filter"
        android:entries="@array/state_filter"
        android:prompt="@string/state_spinner_title"
        android:spinnerMode="dialog" >
    </Spinner>

    <Spinner
        android:id="@+id/college_type_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_weight=".16"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_below="@id/state_filter"
        android:entries="@array/college_type_filter"
        android:prompt="@string/college_type_filter_title"
        android:spinnerMode="dialog" >
    </Spinner>

    <Spinner
        android:id="@+id/semester_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:layout_weight=".16"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_below="@id/college_type_filter"
        android:entries="@array/semester_filter"
        android:prompt="@string/semester_filter_title"
        android:spinnerMode="dialog" >
    </Spinner>

        <Spinner
            android:id="@+id/admission_difficulty_filter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight=".16"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_below="@id/semester_filter"
            android:entries="@array/difficulty_filter"
            android:prompt="@string/difficulty_filter_title"
            android:spinnerMode="dialog" >
        </Spinner>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight=".15"
            android:background="@color/background"
            android:id="@+id/buttonId"
            >
    <Button
        android:id="@+id/submit"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="SEARCH"
        android:background="@drawable/ripple"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

        </LinearLayout>


</LinearLayout>
